// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SpacingBox renders default 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-repeat: no-repeat;
  padding: 16px;
}

<div
    class="emotion-0"
    data-cy="spacingBox"
  >
    content
  </div>
</DocumentFragment>
`;

exports[`SpacingBox renders with all props 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-repeat: no-repeat;
  padding-top: 24px;
}

<div
    class="emotion-0"
    data-cy="spacingBox"
  >
    content
  </div>
</DocumentFragment>
`;

exports[`SpacingBox renders with different spacing on each side 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-repeat: no-repeat;
  padding-top: 0;
  padding-right: 8px;
  padding-bottom: 12px;
  padding-left: 16px;
}

<div
    class="emotion-0"
    data-cy="spacingBox"
  >
    content
  </div>
</DocumentFragment>
`;

exports[`SpacingBox renders with responsive spacing on each side 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-repeat: no-repeat;
}

@media (min-width: 0) {
  .emotion-0 {
    padding-top: 0;
  }
}

@media (min-width: 900px) {
  .emotion-0 {
    padding-top: 8px;
  }
}

@media (min-width: 0) {
  .emotion-0 {
    padding-right: 0;
  }
}

@media (min-width: 900px) {
  .emotion-0 {
    padding-right: 12px;
  }
}

@media (min-width: 0) {
  .emotion-0 {
    padding-bottom: 0;
  }
}

@media (min-width: 900px) {
  .emotion-0 {
    padding-bottom: 16px;
  }
}

@media (min-width: 0) {
  .emotion-0 {
    padding-left: 0;
  }
}

@media (min-width: 900px) {
  .emotion-0 {
    padding-left: 24px;
  }
}

<div
    class="emotion-0"
    data-cy="spacingBox"
  >
    content
  </div>
</DocumentFragment>
`;

exports[`SpacingBox renders with responsive spacingSize 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-repeat: no-repeat;
}

@media (min-width: 0) {
  .emotion-0 {
    padding-top: 12px;
  }
}

@media (min-width: 900px) {
  .emotion-0 {
    padding-top: 16px;
  }
}

<div
    class="emotion-0"
    data-cy="spacingBox"
  >
    content
  </div>
</DocumentFragment>
`;
